force-app/main/default/objects/Immigration_Status__c/Immigration_Status__c.object-meta.xml
<CustomObject>
    <description>Immigration statues and documents.</description>
    <label>Immigration Status</label>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>Immigration Status</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Immigration Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>