force-app/main/default/objects/Immigration_Status__c/fields/Annotation_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Annotation_Restrictions__c</fullName>
    <description>Comments stamped by the issuing visa office on a person&apos;s visa, often specifying exceptions to the standard visa type permissions.</description>
    <label>Annotation/Restrictions</label>
    <type>TextArea</type>
</CustomField>