force-app/main/default/objects/Immigration_Status__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document #</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>