force-app/main/default/objects/Immigration_Status__c/fields/Issuing_office_post__c.field-meta.xml
<CustomField>
    <fullName>Issuing_office_post__c</fullName>
    <label>Issuing office/post</label>
    <length>100</length>
    <type>Text</type>
</CustomField>