force-app/main/default/objects/Immigration_Status__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <inlineHelpText>Constituent&apos;s nationality by birth.</inlineHelpText>
    <label>Nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>