force-app/main/default/objects/Immigration_Status__c/fields/Num_of_Entries__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Entries__c</fullName>
    <description>Number of entries into country permitted by the constituent&apos;s visa .</description>
    <inlineHelpText>Number of entries into country permitted by the constituent&apos;s visa .</inlineHelpText>
    <label>Num of Entries</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One/single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>