force-app/main/default/objects/Immigration_Status__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport #</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>