force-app/main/default/objects/Immigration_Status__c/fields/Registration_num__c.field-meta.xml
<CustomField>
    <fullName>Registration_num__c</fullName>
    <label>Registration #</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>