force-app/main/default/objects/Immigration_Status__c/fields/Renewal_reminder__c.field-meta.xml
<CustomField>
    <fullName>Renewal_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked yes, the record owner will receive a task to remind the constituent to renew their visa 6 months in advance of expiry date.</description>
    <inlineHelpText>If checked yes, the record owner will receive a task to remind the constituent to renew their visa 6 months in advance of expiry date.</inlineHelpText>
    <label>Renewal reminder?</label>
    <type>Checkbox</type>
</CustomField>