force-app/main/default/objects/Immigration_Status__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Permit/Visa granted.</description>
    <inlineHelpText>Type of Permit/Visa granted.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visitor Record</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
            <value>
                <fullName>Temporary Resident</fullName>
            </value>
            <value>
                <fullName>Work Visa</fullName>
            </value>
            <value>
                <fullName>Student Visa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>