force-app/main/default/objects/Immigration_Status__c/fields/Visa_category__c.field-meta.xml
<CustomField>
    <fullName>Visa_category__c</fullName>
    <description>DEPRECATED</description>
    <label>zVisa category - Deprecated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>