force-app/main/default/objects/Immigration_Status__c/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <description>DEPRECATED - Type of Permit or Visa granted.</description>
    <label>zVisa Type - Deprecated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>