force-app/main/default/objects/Immigration_Status__c/recordTypes/Passport.recordType-meta.xml
<RecordType>
    <fullName>Passport</fullName>
    <active>true</active>
    <label>Passport</label>
</RecordType>