force-app/main/default/objects/Immigration_Status__c/recordTypes/Permanent_Residency.recordType-meta.xml
<RecordType>
    <fullName>Permanent_Residency</fullName>
    <active>true</active>
    <label>Permanent Residency</label>
</RecordType>