force-app/main/default/objects/Immigration_Status__c/recordTypes/Permit.recordType-meta.xml
<RecordType>
    <fullName>Permit</fullName>
    <active>true</active>
    <description>Represents a granted Permit to work, live, or study in the granting country.</description>
    <label>Permit</label>
</RecordType>