force-app/main/default/objects/Immigration_Status__c/recordTypes/Visa.recordType-meta.xml
<RecordType>
    <fullName>Visa</fullName>
    <active>true</active>
    <label>Visa</label>
</RecordType>